objects/Step_Forward_Activity__c.object
<CustomObject>
    <fields>
        <fullName>Associate_call_result__c</fullName>
        <label>Associate call result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No answer</fullName>
                </value>
                <value>
                    <fullName>Left a message</fullName>
                </value>
                <value>
                    <fullName>Response - Not interested</fullName>
                </value>
                <value>
                    <fullName>Response - Thinking of applying</fullName>
                </value>
                <value>
                    <fullName>Response - Interested</fullName>
                </value>
                <value>
                    <fullName>Response - Would like more information</fullName>
                </value>
                <value>
                    <fullName>Response - Will apply</fullName>
                </value>
                <value>
                    <fullName>Spoke to Parent/Guardian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Associate_email_address__c</fullName>
        <formula>Associate__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Associate email address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associate_home_number__c</fullName>
        <label>Associate home number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Associate_mobile_number__c</fullName>
        <formula>Associate__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Associate mobile number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendance_confirmed_for_matching_eve_P__c</fullName>
        <label>Attendance confirmed for matching eve-YP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tuesday 31 March</fullName>
                </value>
                <value>
                    <fullName>Tuesday 28 April</fullName>
                </value>
                <value>
                    <fullName>Thursday 18 June</fullName>
                </value>
                <value>
                    <fullName>Tuesday 14 July</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attended_Interview_Prep_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Did they attend?</inlineHelpText>
        <label>Attended Interview Prep Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attending_Assessment__c</fullName>
        <label>Attending Assessment?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>No, but I could make later assessment if available</fullName>
                </value>
                <value>
                    <fullName>No response received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attending_Interview_Prep_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attending Interview Prep Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attending_info_eve__c</fullName>
        <label>Attending info eve</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attending</fullName>
                </value>
                <value>
                    <fullName>Not Attending</fullName>
                </value>
                <value>
                    <fullName>No Response</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Available_for_Extra_activities__c</fullName>
        <inlineHelpText>On occasion we run extra activities between 2nd and 9th September 2016. Please let us know if you are not available</inlineHelpText>
        <label>Available for Extra activities?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes I am available</fullName>
                </value>
                <value>
                    <fullName>No I am not available</fullName>
                </value>
                <value>
                    <fullName>I don’t know</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Available_for_Induction_week__c</fullName>
        <label>Available for Induction week?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Available_for_first_day_of_work__c</fullName>
        <label>Available for first day of work?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSS_Experience_Detail__c</fullName>
        <label>BA Experience Detail</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BSS_Experience__c</fullName>
        <label>BA Experience</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Office work</fullName>
                </value>
                <value>
                    <fullName>Telephoning customers</fullName>
                </value>
                <value>
                    <fullName>Customer service</fullName>
                </value>
                <value>
                    <fullName>Typing</fullName>
                </value>
                <value>
                    <fullName>Writing letters</fullName>
                </value>
                <value>
                    <fullName>E-mail correspondence with customers</fullName>
                </value>
                <value>
                    <fullName>Taking and typing minutes</fullName>
                </value>
                <value>
                    <fullName>Dealing with post</fullName>
                </value>
                <value>
                    <fullName>Presenting to a group</fullName>
                </value>
                <value>
                    <fullName>Attention to detail</fullName>
                </value>
                <value>
                    <fullName>Microsoft word</fullName>
                </value>
                <value>
                    <fullName>Microsoft excel</fullName>
                </value>
                <value>
                    <fullName>Microsoft power point</fullName>
                </value>
                <value>
                    <fullName>Microsoft outlook</fullName>
                </value>
                <value>
                    <fullName>Microsoft windows</fullName>
                </value>
                <value>
                    <fullName>Microsoft desk top</fullName>
                </value>
                <value>
                    <fullName>Internet explorer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSS_Feedback__c</fullName>
        <formula>if(and(BSS_Score__c&gt;0,BSS_Score__c&lt;=9),

&quot;The session aimed to assess key skills required for a role in Business Administration which everyone was assessed in, including numeracy and writing skills, and ability to organise and prioritise. You scored well in some of the exercises, however, others scored higher in more areas.&quot;,

if(and(BSS_Score__c&gt;9,BSS_Score__c&lt;=14),

&quot;The session aimed to assess key skills required for a role in Business Administration which everyone was assessed in, including numeracy and writing skills, and ability to organise and prioritise. You scored very well in the majority of the exercises, however, others scored higher in more areas.&quot;,

if(and(BSS_Score__c&gt;14,BSS_Score__c&lt;=20),

&quot;The session aimed to assess key skills required for a role in Business Administration which everyone was assessed in, including numeracy and writing skills, and ability to organise and prioritise. You did extremely well in this session, scoring highly in each exercise.&quot;,&quot;&quot;)))</formula>
        <inlineHelpText>Feedback for BSS assessment scores.</inlineHelpText>
        <label>BA Feedback</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BSS_Final_Score__c</fullName>
        <formula>if(Interview_Score__c&gt;0,((BSS_Score__c/40)*100/3)+((STEP_Score__c/20)*100/3)+((Interview_Score__c/20)*100/3),((BSS_Score__c/40)*100/3)+((STEP_Score__c/20)*100/3))</formula>
        <label>BA Final Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BSS_Pathway_Reason_for_Interest__c</fullName>
        <label>BA Pathway - Reason for Interest</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BSS_Score__c</fullName>
        <label>BA Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BTEC_Level_2_Distinction__c</fullName>
        <label>BTEC Level 2 Distinction</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Additional Science</fullName>
                </value>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Adult Learning</fullName>
                </value>
                <value>
                    <fullName>Advice and Guidance</fullName>
                </value>
                <value>
                    <fullName>Afrikaans</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Ancient History</fullName>
                </value>
                <value>
                    <fullName>Animal Care and Veterinary Science</fullName>
                </value>
                <value>
                    <fullName>Anthropology</fullName>
                </value>
                <value>
                    <fullName>Applied Art and Design</fullName>
                </value>
                <value>
                    <fullName>Applied Mathematics</fullName>
                </value>
                <value>
                    <fullName>Archaeology</fullName>
                </value>
                <value>
                    <fullName>Architecture</fullName>
                </value>
                <value>
                    <fullName>Art, Design and Media</fullName>
                </value>
                <value>
                    <fullName>Art and Design</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Beauty Therapy and Hairdressing</fullName>
                </value>
                <value>
                    <fullName>Being Entrepreneurial</fullName>
                </value>
                <value>
                    <fullName>Bengali</fullName>
                </value>
                <value>
                    <fullName>Biblical Hebrew</fullName>
                </value>
                <value>
                    <fullName>Biology</fullName>
                </value>
                <value>
                    <fullName>Building and Construction</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Chemistry</fullName>
                </value>
                <value>
                    <fullName>Child Development</fullName>
                </value>
                <value>
                    <fullName>Child Development and Well Being</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Citizenship</fullName>
                </value>
                <value>
                    <fullName>Classical Civilisation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BTEC_Level_2_Merit__c</fullName>
        <label>BTEC Level 2 Merit</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Additional Science</fullName>
                </value>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Adult Learning</fullName>
                </value>
                <value>
                    <fullName>Advice and Guidance</fullName>
                </value>
                <value>
                    <fullName>Afrikaans</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Ancient History</fullName>
                </value>
                <value>
                    <fullName>Animal Care and Veterinary Science</fullName>
                </value>
                <value>
                    <fullName>Anthropology</fullName>
                </value>
                <value>
                    <fullName>Applied Art and Design</fullName>
                </value>
                <value>
                    <fullName>Applied Mathematics</fullName>
                </value>
                <value>
                    <fullName>Archaeology</fullName>
                </value>
                <value>
                    <fullName>Architecture</fullName>
                </value>
                <value>
                    <fullName>Art, Design and Media</fullName>
                </value>
                <value>
                    <fullName>Art and Design</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Beauty Therapy and Hairdressing</fullName>
                </value>
                <value>
                    <fullName>Being Entrepreneurial</fullName>
                </value>
                <value>
                    <fullName>Bengali</fullName>
                </value>
                <value>
                    <fullName>Biblical Hebrew</fullName>
                </value>
                <value>
                    <fullName>Biology</fullName>
                </value>
                <value>
                    <fullName>Building and Construction</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Chemistry</fullName>
                </value>
                <value>
                    <fullName>Child Development</fullName>
                </value>
                <value>
                    <fullName>Child Development and Well Being</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Citizenship</fullName>
                </value>
                <value>
                    <fullName>Classical Civilisation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BTEC_Level_2_Pass__c</fullName>
        <label>BTEC Level 2 Pass</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Additional Science</fullName>
                </value>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Adult Learning</fullName>
                </value>
                <value>
                    <fullName>Advice and Guidance</fullName>
                </value>
                <value>
                    <fullName>Afrikaans</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Ancient History</fullName>
                </value>
                <value>
                    <fullName>Animal Care and Veterinary Science</fullName>
                </value>
                <value>
                    <fullName>Anthropology</fullName>
                </value>
                <value>
                    <fullName>Applied Art and Design</fullName>
                </value>
                <value>
                    <fullName>Applied Mathematics</fullName>
                </value>
                <value>
                    <fullName>Archaeology</fullName>
                </value>
                <value>
                    <fullName>Architecture</fullName>
                </value>
                <value>
                    <fullName>Art, Design and Media</fullName>
                </value>
                <value>
                    <fullName>Art and Design</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Beauty Therapy and Hairdressing</fullName>
                </value>
                <value>
                    <fullName>Being Entrepreneurial</fullName>
                </value>
                <value>
                    <fullName>Bengali</fullName>
                </value>
                <value>
                    <fullName>Biblical Hebrew</fullName>
                </value>
                <value>
                    <fullName>Biology</fullName>
                </value>
                <value>
                    <fullName>Building and Construction</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Chemistry</fullName>
                </value>
                <value>
                    <fullName>Child Development</fullName>
                </value>
                <value>
                    <fullName>Child Development and Well Being</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Citizenship</fullName>
                </value>
                <value>
                    <fullName>Classical Civilisation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BTEC_Level_2_status__c</fullName>
        <label>BTEC Level 2: status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Predicted</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BTEC_Level_3_Distinction__c</fullName>
        <label>BTEC Level 3 Distinction</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Additional Science</fullName>
                </value>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Adult Learning</fullName>
                </value>
                <value>
                    <fullName>Advice and Guidance</fullName>
                </value>
                <value>
                    <fullName>Afrikaans</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Ancient History</fullName>
                </value>
                <value>
                    <fullName>Animal Care and Veterinary Science</fullName>
                </value>
                <value>
                    <fullName>Anthropology</fullName>
                </value>
                <value>
                    <fullName>Applied Art and Design</fullName>
                </value>
                <value>
                    <fullName>Applied Mathematics</fullName>
                </value>
                <value>
                    <fullName>Archaeology</fullName>
                </value>
                <value>
                    <fullName>Architecture</fullName>
                </value>
                <value>
                    <fullName>Art, Design and Media</fullName>
                </value>
                <value>
                    <fullName>Art and Design</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Beauty Therapy and Hairdressing</fullName>
                </value>
                <value>
                    <fullName>Being Entrepreneurial</fullName>
                </value>
                <value>
                    <fullName>Bengali</fullName>
                </value>
                <value>
                    <fullName>Biblical Hebrew</fullName>
                </value>
                <value>
                    <fullName>Biology</fullName>
                </value>
                <value>
                    <fullName>Building and Construction</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Chemistry</fullName>
                </value>
                <value>
                    <fullName>Child Development</fullName>
                </value>
                <value>
                    <fullName>Child Development and Well Being</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Citizenship</fullName>
                </value>
                <value>
                    <fullName>Classical Civilisation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BTEC_Level_3_Merit__c</fullName>
        <label>BTEC Level 3 Merit</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Additional Science</fullName>
                </value>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Adult Learning</fullName>
                </value>
                <value>
                    <fullName>Advice and Guidance</fullName>
                </value>
                <value>
                    <fullName>Afrikaans</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Ancient History</fullName>
                </value>
                <value>
                    <fullName>Animal Care and Veterinary Science</fullName>
                </value>
                <value>
                    <fullName>Anthropology</fullName>
                </value>
                <value>
                    <fullName>Applied Art and Design</fullName>
                </value>
                <value>
                    <fullName>Applied Mathematics</fullName>
                </value>
                <value>
                    <fullName>Archaeology</fullName>
                </value>
                <value>
                    <fullName>Architecture</fullName>
                </value>
                <value>
                    <fullName>Art, Design and Media</fullName>
                </value>
                <value>
                    <fullName>Art and Design</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Beauty Therapy and Hairdressing</fullName>
                </value>
                <value>
                    <fullName>Being Entrepreneurial</fullName>
                </value>
                <value>
                    <fullName>Bengali</fullName>
                </value>
                <value>
                    <fullName>Biblical Hebrew</fullName>
                </value>
                <value>
                    <fullName>Biology</fullName>
                </value>
                <value>
                    <fullName>Building and Construction</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Chemistry</fullName>
                </value>
                <value>
                    <fullName>Child Development</fullName>
                </value>
                <value>
                    <fullName>Child Development and Well Being</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Citizenship</fullName>
                </value>
                <value>
                    <fullName>Classical Civilisation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BTEC_Level_3_Pass__c</fullName>
        <label>BTEC Level 3 Pass</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Additional Science</fullName>
                </value>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Adult Learning</fullName>
                </value>
                <value>
                    <fullName>Advice and Guidance</fullName>
                </value>
                <value>
                    <fullName>Afrikaans</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Ancient History</fullName>
                </value>
                <value>
                    <fullName>Animal Care and Veterinary Science</fullName>
                </value>
                <value>
                    <fullName>Anthropology</fullName>
                </value>
                <value>
                    <fullName>Applied Art and Design</fullName>
                </value>
                <value>
                    <fullName>Applied Mathematics</fullName>
                </value>
                <value>
                    <fullName>Archaeology</fullName>
                </value>
                <value>
                    <fullName>Architecture</fullName>
                </value>
                <value>
                    <fullName>Art, Design and Media</fullName>
                </value>
                <value>
                    <fullName>Art and Design</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Beauty Therapy and Hairdressing</fullName>
                </value>
                <value>
                    <fullName>Being Entrepreneurial</fullName>
                </value>
                <value>
                    <fullName>Bengali</fullName>
                </value>
                <value>
                    <fullName>Biblical Hebrew</fullName>
                </value>
                <value>
                    <fullName>Biology</fullName>
                </value>
                <value>
                    <fullName>Building and Construction</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Chemistry</fullName>
                </value>
                <value>
                    <fullName>Child Development</fullName>
                </value>
                <value>
                    <fullName>Child Development and Well Being</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Citizenship</fullName>
                </value>
                <value>
                    <fullName>Classical Civilisation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BTEC_Level_3_status__c</fullName>
        <label>BTEC Level 3: status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Predicted</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Been_subjected_to_CCJ__c</fullName>
        <label>Been subjected to a CCJ?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unsure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Borough_of_most_recent_school_college__c</fullName>
        <label>Borough of most recent school/college</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CV_Approved_Accounting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CV Approved - Accounting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CV_Approved_BSS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CV Approved - BA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CV_Approved_EYE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CV Approved - EYE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CV_Approved_Hosp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CV Approved - Hosp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CV_Approved_IT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CV Approved - IT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CV_Approved_SM_DM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CV Approved - SM&amp;DM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CV_Doc_Name__c</fullName>
        <formula>Associate__r.FirstName&amp;&quot; &quot;&amp;Associate__r.LastName&amp;&quot; CV &quot;&amp;&quot;2016&quot;</formula>
        <label>CV Doc Name</label>
        <type>Text</type>
    </fields>
</CustomObject>